test suite added

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -35,5 +35,17 @@ add_executable(network_test network_test.cpp
 target_link_libraries(network_test ${GDAL_LIBRARIES} ${OpenMP_CXX_LIBRARIES}
 ${OSMIUM_LIBRARIES})
 
+add_executable(weightmatch_test weightmatch_test.cpp
+        $<TARGET_OBJECTS:MM_OBJ>
+        $<TARGET_OBJECTS:CORE>
+        $<TARGET_OBJECTS:CONFIG>
+        $<TARGET_OBJECTS:ALGORITHM>
+        $<TARGET_OBJECTS:UTIL>
+        $<TARGET_OBJECTS:IO>
+        $<TARGET_OBJECTS:NETWORK>
+        $<TARGET_OBJECTS:WEIGHTMATCH_OBJ>)
+target_link_libraries(weightmatch_test ${GDAL_LIBRARIES} ${Boost_LIBRARIES}
+        ${OpenMP_CXX_LIBRARIES} ${OSMIUM_LIBRARIES})
+
 add_custom_target(tests
-	DEPENDS algorithm_test network_test network_graph_test fmm_test)
+	DEPENDS algorithm_test network_test network_graph_test fmm_test weightmatch_test)
